--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,3 @@
-@remvw: 1366 / 100vw;
-
 #app {
   width: 100%;
   height: 100%;
@@ -19,12 +17,13 @@
     align-items: center;
     justify-content: center;
     background-color: #ADAD;
+    margin: 60px 0 0 0;
     .toItem {
       width: 5%;
       display: flex;
       // router-link
       a {
-        height: 100px;
+        height: 30px;
         // margin: 0 10px 0 10px;
         font-weight: bold;
         color: #2c3e50;
